 + New call: AddMissionHog(health): Add a hedgehog for the mission team
 + New call: SetTeamPassive(teamname, isPassive): Mark a team as passive. Passive teams do not play and are treated like frozen teams.
 + New return value: AddTeam/AddMissionTeam return <real team name>, <team index>
 + SetClanColor: Now accepts negative color argument for user clan color, like in AddTeam
 + Utils library: New calls: getReadableChallengeRecord, updateChallengeRecord, integerSqrt, integerHypotenuse
 + New callback: onGameResult(winningClan): Called when the game ends normally. winningClan = index of winning clan or -1 on draw
 + New callback: onCaseDrop(gear): Called at the point where a crate MIGHT be dropped between turns. Gear is the crate gear or nil
 + New callback: onPreciseLocal(): Called when precise key is pressed client-side
 + SendStat extension: Option to use predefined modes with siPointType, like "!POINTS" or "!TIME"
 + SimpleMission: Add isMissionTeam attribute for teams
 + SpeedShoppa/TargetPractice libraries: Remove custom hog and team info settings
 + TargetPractice library: Add faceLeft parameter
 + Params explode, poison in the SpawnFake*Crate functions now optional and default to false
 + New global: InitHealth: Initial hog health value from game scheme (read-only)
 + Animate library: AnimOutOfNowhere: destX and destY are now optional (default: current position)
 * Fix SetClanColor causing crashes and severe rendering bugs
 * Fix SetAmmoDelay not working properly when called after onGameStart
 * Fix DismissTeam not clearing team properly
 * SimpleMission: Fix Lua error spam when a custom goal fails
 * gstWinner state is preserved after the game ended

====================== 0.9.25 ======================
HIGHLIGHTS:
 + Complete overhaul of Continental supplies
 + Can adjust weapon start and crate probabilities in Balanced Random Weapon
 + Remove rubber duck
 + New air mine features
 + Rework team rankings
 + Tied teams now rank equally